--- a/CV_Projekt/CV_Projekt/Views/Project/Project.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Project/Project.cshtml
@@ -4,7 +4,7 @@
 
 
 <body class="bodyUserProfileSettings"
-style="margin: 0;
+style="margin: 0 0 2rem 0;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Poppins', sans-serif;
