snyggade upp sökfönstret

--- a/CV_Projekt/CV_Projekt/Views/Search/SearchWindow.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Search/SearchWindow.cshtml
@@ -51,8 +51,8 @@
             <p>Inga resultat hittades för "@ViewData["SearchedName"]"</p>
         }
     } else {
-        <div class="d-flex justify-content-center align-items-center">
-            <i class="fa-magnifying-glass" style="font-size: 100px; color: #ff6219;"></i>
+        <div class="d-flex justify-content-center align-items-center" style="height: 100%; min-height:200px">
+            <i class="fa-solid fa-magnifying-glass" style="font-size: 100px; color: #ffb08c;"></i>
         </div>
     }
 </div>
