--- a/CV_Projekt/CV_Projekt/Views/Message/Add.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/Add.cshtml
@@ -38,8 +38,8 @@
 						<input asp-for="@Model.Message.Date" type="hidden" name="Date" value="DateTime.Now" />
 						<input asp-for="@Model.Message.isRead" type="hidden" value="false" />
 						
-                        <div style="text-align:right; margin-top: 1rem;">
-						<a class="btn" style="background-color:#fff; color:#ff6219; border: 1px solid #ff6219; margin-bottom:1rem; "><i class="fa-solid fa-pen"></i>Skicka meddelande</a>
+                        <div style="d-flex justify-content-end; margin-top: 1rem;">
+                            <button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Skicka Meddelande</button>
 						</div>
 					</form>
              </div>
