tog bort ett stavfel

--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -126,7 +126,7 @@
 							</div>
 						</div>
 						<div>
-							<form method="post" asp-action="FindFriend" asp-controller="¨Profile" asp-route-id="@Model.User.Id">
+							<form method="post" asp-action="FindFriend" asp-controller="Profile" asp-route-id="@Model.User.Id">
 								<input asp-for="User.Id" value="@Model.User.Id" hidden />
 								<button type="submit">Hitta någon som jag!</button>
 							</form>
