--- a/CV_Projekt/CV_Projekt/Views/Cv/Update.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Cv/Update.cshtml
@@ -73,7 +73,7 @@
                             <div class="work-item d-flex justify-content-between align-items-center">
 									<span class="work-name"><b>@work.Description</b></span>
                                 <button asp-action="RemoveExperience"
-                                        asp-route-pid="@work.Id"
+                                        asp-route-id="@work.Id"
                                         class="btn btn-sm remove-btn"
                                         style="background-color: #fff;
                                                 color: #ff6219;
@@ -153,7 +153,7 @@
                                 <div class="edu-item d-flex justify-content-between align-items-center">
 									<span class="edu-name"><b>@edu.Program</b></span>
                                     <button asp-action="RemoveExperience"
-                                            asp-route-pid="@edu.Id"
+                                            asp-route-id="@edu.Id"
                                             class="btn btn-sm remove-btn"
                                             style="background-color: #fff;
                                                 color: #ff6219;
@@ -222,7 +222,7 @@
                                 <div class="otherExp-item d-flex justify-content-between align-items-center">
 									<span class="otherExp-name"><b>@otherExp.Type</b></span>
                                     <button asp-action="RemoveExperience"
-                                            asp-route-pid="@otherExp.Id"
+                                            asp-route-id="@otherExp.Id"
                                             class="btn btn-sm remove-btn"
                                             style="background-color: #fff;
                                                 color: #ff6219;
@@ -267,7 +267,7 @@
                             <li>
                                 <div class="skill-item d-flex justify-content-between align-items-center">
 									<span class="skill-name"><b>@Model.Skills[i]</b></span>
-                                    <button asp-action="RemoveExperience"
+                                    <button asp-action="RemoveSkill"
                                             asp-route-id="@Model.CvId"
                                             class="btn btn-sm remove-btn"
                                             style="background-color: #fff;
