--- a/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/ChatList.cshtml
@@ -1,5 +1,122 @@
 ﻿@model ChatListViewModel
 
+
+<section class="h-100">
+	<div class="container py-5 h-100">
+		<div class="row d-flex justify-content-center">
+			
+			<div class="col col-lg-9 col-xl-8">
+				<div class="card" style="border: 2px solid #ff6219; ">
+                    <section>
+                        <div class="container py-5">
+
+                            <div class="row d-flex justify-content-center">
+                               
+
+                                    <div class="card" id="chat2">
+                                        <div class="card-header d-flex justify-content-between align-items-center p-3">
+										<h5 class="mb-0" style="color: #ff6219;"><b>Inkorg</b></h5>
+                                        
+                                            
+                                        </div>
+                                        <div class="card-body" data-mdb-perfect-scrollbar-init style="position: relative; height: 500px">
+
+                                            <div class="d-flex flex-row justify-content-start">
+                                                
+                                                <img src="profilbildFörSender1"
+                                                     alt="avatar 1" style="width: 45px; height: 100%;">
+                                                <div>
+                                                <p class="p-2 ms-3 mb-1 rounded-3 text-truncate message-p" style="background-color:#fff; border: 1px solid #ff6219;"><b>Ämne</b><br />Meddelande....rakakajdnksfjkafakjbfjabsfjkbaksfbaksfkjbsfkabfjafbksfkjasbjfbjakbfkabsjfbabsfasbfkabsf</p>
+                                                    
+                                                    <p class="ms-3 mb-3 rounded-3 text-muted">Tiden senaste meddelandet skickades</p>
+                                                <a class="btn mb-2" style="background-color:#ff6219; color:#fff; margin-left: 3px;">Öppna konversation</a>
+                                                </div>
+                                            </div>
+
+                                            <div class="divider d-flex align-items-center mb-4">
+                                                <p class="text-center mx-3 mb-0" style="color: #a2aab7;"></p>
+                                            </div>
+
+                                        <div class="d-flex flex-row justify-content-start">
+
+                                            <img src="profilbildFörSender1"
+                                                 alt="avatar 1" style="width: 45px; height: 100%;">
+                                            <div>
+                                                <p class="p-2 ms-3 mb-1 rounded-3 text-truncate message-p" style="background-color:#fff; border: 1px solid #ff6219;"><b>Ämne</b><br />Meddelande....rakakajdnksfjkafakjbfjabsfjkbaksfbaksfkjbsfkabfjafbksfkjasbjfbjakbfkabsjfbabsfasbfkabsf</p>
+
+                                                <p class="ms-3 mb-3 rounded-3 text-muted">Tiden senaste meddelandet skickades</p>
+                                                <a class="btn mb-2" style="background-color:#ff6219; color:#fff; margin-left: 3px;">Öppna konversation</a>
+                                            </div>
+                                        </div>
+
+                                        
+										<div class="divider d-flex align-items-center mb-4">
+											<p class="text-center mx-3 mb-0" style="color: #a2aab7;"></p>
+										</div>
+									</div>
+                                        
+                                           
+
+                                        </div>
+                                        <div class="card-footer text-muted d-flex justify-content-end align-items-center p-3">
+                                           
+                                            <a class="btn" style="color:#ff6219; background-color:#fff; margin-left: 3px;">Tillbaka</a>
+                                        </div>
+                                    </div>
+
+                              
+                            </div>
+
+                        </div>
+                    </section>
+				</div>
+			</div>
+		</div>
+	</div>							
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h2 style="color:#FFF;">Inkorg</h2>
 <h3 style="color:#FFF;">Olästa Meddelanden</h3>
 @foreach (var message in Model.ReceivedMessages)
