--- a/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/AllUserList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserViewModel
 
-<h2>Vem vill du skriva till?</h2>
+<h2 style="color:#FFF;">Vem vill du skriva till?</h2>
 
 @foreach (User user in @Model._users)
 {
