--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -128,7 +128,7 @@
 						<div>
 							<form method="post" asp-action="FindFriend" asp-controller="Profile" asp-route-id="@Model.User.Id">
 								<input asp-for="User.Id" value="@Model.User.Id" hidden />
-								<button type="submit">Hitta någon som jag!</button>
+								<button type="submit" class="btn border border-light button mr-3 text-light" style="background-color:#ff6219;">Hitta någon som jag!</button>
 							</form>
 
 						</div>
