--- a/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Account/Register.cshtml
@@ -100,7 +100,7 @@
                    font-weight: 400;">
             Registrera Konto
         </h4>
-        <div asp-validation-summary="All" class="text-danger">here there be errors</div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
 		<div class="py-2">
 			<form method="post" asp-action="Register" onsubmit="">
