--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -131,10 +131,6 @@
 
 <div class="d-flex justify-content-center mt-2">
     
-    
-    
-
-    
         <a asp-controller="Project" asp-action="ShowProjectsView" class="btn text-light" style="background-color:#ff6219; margin:1rem;">Visa alla projekt</a>
    
 </div>
@@ -142,7 +138,7 @@
     <a  class="btn btn-primary text-light"
     style="background-color:#ff6219; margin-bottom:2rem;"
     asp-controller="Message"
-    asp-action="ChatList"
+    asp-action="Inbox"
     asp-route-id="1">
         Visa Meddelanden
     </a>
