--- a/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Home/Index.cshtml
@@ -138,8 +138,7 @@
     <a  class="btn btn-primary text-light"
     style="background-color:#ff6219; margin-bottom:2rem;"
     asp-controller="Message"
-    asp-action="Inbox"
-    asp-route-id="1">
+    asp-action="Inbox">
         Visa Meddelanden
     </a>
 </div>
