--- a/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Profile/Profile.cshtml
@@ -60,7 +60,7 @@
 												}
 												else
 												{
-													<a asp-controller="Message" asp-action="AddAnon" asp-route-id="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219;">
+													<a asp-controller="Message" asp-action="AddAnon" asp-route-oid="@Model.User.Id" class="btn" style="background-color:#fff; color:#ff6219;">
 														<i class="fa-solid fa-envelope position-relative">
 														</i>Skicka Meddelande
 													</a>
