--- a/CV_Projekt/CV_Projekt/Views/Message/AddAnon.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/AddAnon.cshtml
@@ -1,4 +1,4 @@
-﻿@model AddAnonViewModel
+﻿@model MessageViewModel
 
 
 <body class="bodyUserProfileSettings" 
@@ -25,28 +25,20 @@
          <div class="row ">
              <div class="col-md-12">
                     <div asp-validation-summary="All" class="text-danger"></div>
-					<form asp-action="Add" method="post">
+					<form asp-action="Add" asp-controller="Message" method="post">
 						<h6 class="text-dark" style="color:#FFF;"><b>Till:</b> <i>@Model.Receiver.FirstName @Model.Receiver.LastName</i></h6>
 		
 						<label class="settingsLbl text-dark" style="color:#FFF;">Namn:</label>
-						<input class="bg-light form-control" type="text" asp-for="@Model.Name" />
-
-						<label class="settingsLbl text-dark" style="color:#FFF;">E-post:</label>
-						<input class="bg-light form-control" type="text" asp-for="@Model.Email" />
-
-						<label class="settingsLbl text-dark" style="color:#FFF;">Ämne: </label>
-						<input class="bg-light form-control" type="text" asp-for="@Model.Message.Subject" />
+						<input class="bg-light form-control" type="text" asp-for="@Model.Message.SenderName" />
 						
 						<label class="settingsLbl text-dark">Meddelande: </label>
 						<textarea class="bg-light form-control" rows="5" asp-for="@Model.Message.Content"></textarea>
 						
-						<input asp-for="@Model.Message.SenderId" type="hidden" value="null" />
-						<input asp-for="@Model.Message.ReceiverId" type="hidden" value="@Model.Receiver.Id" />
-						<input asp-for="@Model.Message.Date" type="hidden" name="Date" value="DateTime.Now" />
-						<input asp-for="@Model.Message.isRead" type="hidden" value="false" />
+						<input asp-for="Message.ReceiverId" type="hidden" value="@Model.Receiver.Id" />
+						<input asp-for="Message.Date" type="hidden" name="Date" value="DateTime.Now" />
 						
                         <div style="text-align:right; margin-top: 1rem;">
-						<a class="btn" style="background-color:#fff; color:#ff6219; border: 1px solid #ff6219; margin-bottom:1rem; "><i class="fa-solid fa-pen"></i>Skicka meddelande</a>
+						<button type="submit" style="background-color:#fff; color:#ff6219; border: 1px solid #ff6219; margin-bottom:1rem; "><i class="fa-solid fa-pen"></i>Skicka meddelande</button>
 						</div>
 					</form>
              </div>
