--- a/CV_Projekt/CV_Projekt/Views/Message/Inbox.cshtml
+++ b/CV_Projekt/CV_Projekt/Views/Message/Inbox.cshtml
@@ -5,7 +5,8 @@
 <h3 style="color:#FFF;">Olästa Meddelanden</h3>
 
 @foreach (var user in Model.UsersInContact)
-{<div>
+{
+    <div>
         <a asp-controller="Chat" asp-action="Chat11" asp-route-otherId="@user.Id" class="btn">@user.FirstName @user.LastName</a>
         @{
             var unreadCount = 0;
@@ -25,26 +26,18 @@
 </div>
 }
 
-
-
-
-@foreach (var message in Model.ReceivedMessages)
+<h2>Anonyma meddelanden</h2>
+@foreach(Message anonMess in Model.AnonMessages)
 {
-    <div class="card">
-        <h3> Från: @message.Sender.FirstName @message.Sender.LastName </h3>
-        <h4> @message.Subject</h4>
-            <a class="btn btn-primary text-light"
-                   style="background-color:#ff6219; margin-bottom:2rem;"
-                   asp-controller="Chat"
-                   asp-action="Chat11"
-                   asp-route-receiverId="@ViewBag.Id"
-                   asp-route-senderId="@message.SenderId">
-                   Öppna meddelanden
-                </a>
-    </div>
+    <form method="post" asp-action="SetToRead" asp-route-mid="@anonMess.Id" >
+        <p>@anonMess.SenderName</p>
+        <p>@anonMess.Content</p>
+        <p>@anonMess.Date</p>
+        <button type="submit">Markera som läst</button>
+    </form>   
 }
 
-
+@*
 <a class="btn btn-primary text-light"
                style="background-color:#ff6219; margin-bottom:2rem;"
                asp-controller="Message"
@@ -52,7 +45,7 @@
                asp-route-id="@ViewBag.Id">
                Skriv Nytt Meddelande
             </a>
-
+*@
 
         
 
